Arrow keys not working correct in Compositing Node Editor #29165

Closed
opened 2011-11-05 11:30:42 +01:00 by Olaf Arnold · 6 comments
Member

%%%Hi,

try this: switch to node editor -> Compositing Nodes, then do a SHIFT+A to get the ADD Menu.
Now try to browse through the items in the submenu (eg. Input menu items) with the arrow keys.

Key "up" moves down and key "down" moves up in the submenus.

Tested on Blender 2.60.1 revision 41549 on windows 7 64 bit, compiled with
scons build system and VS 2008 x64.%%%

%%%Hi, try this: switch to node editor -> Compositing Nodes, then do a SHIFT+A to get the ADD Menu. Now try to browse through the items in the submenu (eg. Input menu items) with the arrow keys. Key "up" moves down and key "down" moves up in the submenus. Tested on Blender 2.60.1 revision 41549 on windows 7 64 bit, compiled with scons build system and VS 2008 x64.%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Confirmed.%%%

%%%Confirmed.%%%

%%%It's because of how ui_handle_menu_event works -- it makes quite tricky checks in which direction movement happens depending on button type.

Not sure what's easier/safer: change logic of this function or change type of buttons used for nodes menu. Checked usages for uiItemV and found that it's used in node_editor only, so changes type of button used there. Attaching patch and assigning to Brecht to check if it's acceptable change.%%%

%%%It's because of how ui_handle_menu_event works -- it makes quite tricky checks in which direction movement happens depending on button type. Not sure what's easier/safer: change logic of this function or change type of buttons used for nodes menu. Checked usages for uiItemV and found that it's used in node_editor only, so changes type of button used there. Attaching patch and assigning to Brecht to check if it's acceptable change.%%%

%%%Patch looks ok to me, please commit :)%%%

%%%Patch looks ok to me, please commit :)%%%

%%%Commited to svn rev41852. Thanks for the report and review, closing now.%%%

%%%Commited to svn rev41852. Thanks for the report and review, closing now.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#29165
No description provided.