Fix #29165: Arrow keys not working correct in Compositing Node Editor

Bug is caused because of how ui_handle_menu_event works -- it makes quite tricky check
in which direction movement happens depending on button type.

Checked usages for uiItemV and found that it's used in node_editor only, so changed type
of button used there, so ui_handle_menu_event works would detect right direction of
movement.